# src/v1/routes/index.ts
@@ -1,10 +1,10 @@
 import { Router } from 'express';
 import healthRoute from '@/src/v1/controllers/healthcheck/healthcheck';
-import usersRoute from '@/src/v1/controllers/user/user.routes';
+import usersRoute from '@/src/v1/controllers/auth/auth.routes';
 
 const router: Router = Router();
 
 router.use('/health', healthRoute);
-router.use('/user', usersRoute);
+router.use('/auth', usersRoute);
 
 export default router;
